# a-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  pyproject.toml
mazegen/: __init__.py  generator.py  renderer.py  solver.py
src/: __init__.py  config.py  display.py  generator.py  matrix.py  solver.py
